# nlp-final-project

./: README.md  docker-compose.yaml  pyproject.toml
data/: baselinetrain.txt  dump.txt  eval.txt  eval.txty  modeltrain.txt  test.txt  tune.txt
docker/: dockerfile
nlp_final_project/: config.py  emb.pkl  eval.csv  info.txt  main.py  test.py  train.py  tune.py
nlp_final_project/deepset/roberta-base-squad2-distilled_trained/: config.json
nlp_final_project/distilbert/distilbert-base-uncased_trained/: config.json
nlp_final_project/logs/: f1_score_vs_epochs.csv
nlp_final_project/logs/deepset/roberta-base-squad2-distilled/: events.out.tfevents.1712192751.TURINGMACHINE.301164.0  events.out.tfevents.1712195008.TURINGMACHINE.301164.1
nlp_final_project/logs/distilbert/distilbert-base-uncased/: events.out.tfevents.1712189106.TURINGMACHINE.265051.0  events.out.tfevents.1712189160.TURINGMACHINE.265488.0  events.out.tfevents.1712189227.TURINGMACHINE.266016.0  events.out.tfevents.1712189398.TURINGMACHINE.267143.0  events.out.tfevents.1712189438.TURINGMACHINE.267592.0  events.out.tfevents.1712189440.TURINGMACHINE.267592.1  events.out.tfevents.1712189621.TURINGMACHINE.268755.0  events.out.tfevents.1712189624.TURINGMACHINE.268755.1  (+15 more)
nlp_final_project/lucadiliello/: bioasqqa.csv  dropqa.csv  duorc.paraphrasercqa.csv  newsqa.csv  newsqa_t.csv  raceqa.csv  textbookqa.csv
nlp_final_project/models/: generator.py  preprocessor.py  qapipeline.py  qapipelinerag.py  qapipelinerextr.py  reader.py
nlp_final_project/util/: dataset_str.csv  inference.py  tune.py
tests/: train.txt
